# Quotient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
scripts/bash/: build.sh  copy.sh  copy_vst3.sh  setup.sh
source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/filters/: StateVariable.h
source/math/: FFT.h
tests/: CMakeLists.txt  README.md
tests/benchmarks/: CMakeLists.txt  FftBenchmark.cpp
tests/charts/: plot_fft.py  plot_svf.py  requirements.txt
tests/harnesses/: CMakeLists.txt  FftTestHarness.cpp  FilterTestHarness.cpp
tests/numeric/: CMakeLists.txt  FftChartData.h  FftNumericTests.cpp  FftSimdTests.cpp  FftTestSupport.h  SvfChartData.h  SvfNumericTests.cpp  SvfReference.h
